config-root/namespaces/jx-staging/godemo/godemo-godemo-deploy.yaml
# Source: godemo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: godemo-godemo
  labels:
    draft: draft-app
    chart: "godemo-0.0.19"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'godemo'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: godemo-godemo
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: godemo-godemo
    spec:
      serviceAccountName: godemo-godemo
      containers:
        - name: godemo
          image: "ghcr.io/jenkins-x/godemo:0.0.19"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
