config-root/namespaces/jx-staging/godemo/godemo-svc.yaml
# Source: godemo/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: godemo
  labels:
    chart: "godemo-0.0.24"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'godemo'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: godemo-godemo
