config-root/namespaces/jx-staging/godemo/godemo-ingress.yaml
# Source: godemo/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'godemo'
  name: godemo
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: godemo
                port:
                  number: 80
      host: godemo-jx-staging.dev.jenkins-x.me
